model indentifiers as a list;cleanup repo AddPerson
