# api/v1/openapi.yaml
@@ -17,15 +17,11 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AddPersonRequest"
+              $ref: "#/components/schemas/Person"
         required: true
       responses:
         "200":
           description: "Added person successfully"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Person"
         default:
           $ref: "#/components/responses/Error"
 
@@ -60,9 +56,6 @@ components:
         - code
         - message
 
-    AddPersonRequest:
-      $ref: "#/components/schemas/Person"
-
     Person:
       type: object
       properties:
@@ -70,30 +63,47 @@ components:
           type: boolean
         name:
           type: string
+          minLength: 1
         preferred_name:
           type: string
+          minLength: 1
         given_name:
           type: string
+          minLength: 1
         family_name:
           type: string
+          minLength: 1
         preferred_given_name:
           type: string
+          minLength: 1
         preferred_family_name:
           type: string
+          minLength: 1
         honorific_prefix:
           type: string
+          minLength: 1
         email:
           type: string
+          minLength: 1
         roles:
           type: array
           items:
             type: string
+            minLength: 1
         identifiers:
-          type: object
-          minProperties: 1
-          additionalProperties:
-            type: array
-            items:
-              type: string
-            minItems: 1
+          type: array
+          items:
+            $ref: "#/components/schemas/Identifier"
+          minItems: 1
       required: [active, name, identifiers]
+
+    Identifier:
+      type: object
+      properties:
+        type:
+          type: string
+          minLength: 1
+        value:
+          type: string
+          minLength: 1
+      required: [type, value]
